--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,44 @@
-set -g default-command "reattach-to-user-namespace -l /bin/bash"
+set-option -g prefix C-b
+set-option -g default-shell /bin/sh
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+set-option -g status on
+set-option -g status-interval 3
+set-option -g status-utf8 on
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left "#(/Users/alen/.tmux/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(/Users/alen/.tmux/tmux-powerline/powerline.sh right)"
+set-option -g display-time 3000
+set-window-option -g window-status-current-format "#[fg=colour255, bg=colour27] #I #W "
+set-option -g base-index 1
+set-option -g pane-base-index 1
+
+source-file /Users/alen/.tmux/tmuxcolors-256.conf
+bind | split-window -h
+bind - split-window -v
+bind C-a last-window
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# =======================================================================
+# vim-style copy and paste
+setw -g mode-keys vi
+bind ] paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy  Space rectangle-toggle
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# =======================================================================
+
+bind a send-prefix
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind c new-window
 
